--- a/index.html
+++ b/index.html
@@ -32,9 +32,6 @@
     </div>
   </header>
 
-    <section id="math-section" class="py-5">
-      <div class="container">
-  
         <div>
           <math display="block">
             <mrow> 
@@ -141,16 +138,16 @@
     <div class="row">
       <div class="col-md-6 text-center mb-4">
         <h3>Vaizdo įrašų kūrimas</h3>
-        <video width="100%" autoplay loop muted controls>
+        <video width="500" autoplay loop muted controls>
           <source src="assets/video/irasas.mp4" type="video/mp4">
         </video>
       </div>
       <div class="col-md-6 text-center mb-4">
         <h3>Pavyzdinis vaizdo įrašas iš YouTube</h3>
-        <iframe width="100%" height="360" src="https://www.youtube.com/embed/n8xBo-eTq7Y" title="YouTube vaizdo įrašas" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="500" height="360" src="https://www.youtube.com/embed/n8xBo-eTq7Y" title="YouTube vaizdo įrašas" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
-
+    
     <div class="text-center mt-4">
       <h3>Garso redagavimo paslaugos</h3>
       <audio controls>
@@ -301,4 +298,3 @@
   <script src="assets/js/functions.js"></script>
 </body>
 
-</html>
