--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="assets/css/styles.css">
   <title>Asmeninis puslapis - Mano gyvenimo aprašymas ir atlikti darbai</title>
 
-  <script type="text/javascript" async
+  <script type="text/javascript"
     src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
   
 </head>
@@ -144,10 +144,10 @@
       </div>
       <div class="col-md-6 text-center mb-4">
         <h3>Pavyzdinis vaizdo įrašas iš YouTube</h3>
-        <iframe width="500" height="360" src="https://www.youtube.com/embed/n8xBo-eTq7Y" title="YouTube vaizdo įrašas" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="500" height="360" src="https://www.youtube.com/embed/n8xBo-eTq7Y" title="YouTube vaizdo įrašas" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="border: none;"></iframe>
       </div>
     </div>
-    
+
     <div class="text-center mt-4">
       <h3>Garso redagavimo paslaugos</h3>
       <audio controls>
